<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Despicable Me Hunt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">Result Activity</string>
    <string name="btn2">Exit</string>
    <string name="back">Back</string>
    <string name="texview2"></string>
    <string name="textview1"></string>
    <string name="text1">Find all</string>
    <string name="contentdes"></string>
    <string name="btn1">Reset Game</string>
    <string name="resultact">Result Activity</string>
    <string name="content"> </string>
   

</resources>
