<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
  

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="fill_parent"
        android:layout_height="346dp"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:columnWidth="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:paddingTop ="90dip" >
      
    </GridView>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentLeft="true"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/grid_view"
        android:layout_marginTop="15dp"
        android:text="@string/btn2" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/contentdes"
            android:paddingLeft="32dip"
            android:paddingTop="20dip"
            android:text="@string/text1"
            android:textSize="@dimen/size1" />

        <ImageView
            android:id="@+id/imageView1"            android:layout_width="60dp"
            android:layout_height="60dp"
             android:layout_gravity="center_vertical|center_horizontal"
            android:tag="q" />

    </TableRow>

</RelativeLayout>